--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   </head>
   <body>
     <canvas id="myCanvas" width="578" height="400"></canvas>
+    <a href="blacksquare.html">link text</a>
+
     <script>
       function drawImage(imageObj) {
         var canvas = document.getElementById('myCanvas');
