--- a/blacksquare.html
+++ b/blacksquare.html
@@ -8,35 +8,24 @@
       }
     </style>
   </head>
-  <body>
-    <canvas id="myCanvas" width="578" height="400"></canvas>
-    <script>
-      function drawImage(imageObj) {
-        var canvas = document.getElementById('myCanvas');
-        var context = canvas.getContext('2d');
-        var x = 69;
-        var y = 50;
-        context.drawImage(imageObj, x, y);
-        var imageData = context.getImageData(x, y, imageObj.width, imageObj.height);
-        var data = imageData.data;
-        for(var i = 0; i < data.length; i += 4) {
-          var brightness = 0.34 * data[i] + 0.5 * data[i + 1] + 0.16 * data[i + 2];
-          // red
-          data[i] = brightness;
-          // green
-          data[i + 1] = brightness;
-          // blue
-          data[i + 2] = brightness;
-        }
-        // overwrite original image
-        context.putImageData(imageData, x, y);
-      }
+  <body onload="draw();">
+   <canvas id="canvas" width="150" height="150"></canvas>
+ </body>
+    <script type="application/javascript">
       
-      var imageObj = new Image();
-      imageObj.onload = function() {
-        drawImage(this);
-      };
-      imageObj.src = 'img_forest.jpg';
+    function draw() {
+      var canvas = document.getElementById('canvas');
+      if (canvas.getContext) {
+        var ctx = canvas.getContext('2d');
+
+        ctx.fillStyle = 'rgb(200, 0, 0)';
+        ctx.fillRect(10, 10, 50, 50);
+
+        ctx.fillStyle = 'rgba(0, 0, 200, 0.5)';
+        ctx.fillRect(30, 30, 50, 50);
+      }
+    }
+  
     </script>
   </body>
 </html> 
