--- a/blacksquare.html
+++ b/blacksquare.html
@@ -17,7 +17,10 @@
       var canvas = document.getElementById('canvas');
       if (canvas.getContext) {
         var ctx = canvas.getContext('2d');
-
+        
+        ctx.fillStyle = 'rgb(255,255,255)'
+        ctx.fillRect(100,100,100,100)
+        
         ctx.fillStyle = 'rgb(200, 0, 0)';
         ctx.fillRect(10, 10, 50, 50);
 
