--- a/blacksquare.html
+++ b/blacksquare.html
@@ -27,7 +27,7 @@
         ctx.fillStyle = 'rgb(200, 0, 0)';
         ctx.fillRect(10, 10, 50, 50);
         
-        //Purple square
+        //Purple square transparent
         ctx.fillStyle = 'rgba(0, 0, 200, 0.5)';
         ctx.fillRect(30, 30, 50, 50);
         */
