--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <canvas id="myCanvas" width="578" height="400"></canvas>
-    <a href="blacksquare.html">link text</a>
+    <br/>
+    <a href="blacksquare.html">square</a>
+    <a href="zoom.html">zoom</a>
 
     <script>
       function drawImage(imageObj) {
